--- a/assiets/css/wakanda style.css
+++ b/assiets/css/wakanda style.css
@@ -1,1 +1,30 @@
-wakanda style.css
+/*css global*/
+@font-face{ 
+	font-family: BEYNO Regular;
+	src: url(../font/BEYNO.ttf);
+
+}
+/* panthera*/
+@font-face{
+	font-family: panthera;
+	src: url("../font/pantheraRegular-MVZ9J.ttf");
+}
+/* wakanda*/
+@font-face{
+	font-family: Wakanda forever;
+	src: url("../font/WakandaForever-Regular.ttf");
+}
+/* cantarell*/
+@font-face{
+	font-family: cantarell;
+	src: url("../font/cantarell-Regular.ttf");
+}
+html{
+	font-size: 1vw;
+}
+body{
+	background-color: black;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
+}
