--- a/assiets/css/wakanda style.css
+++ b/assiets/css/wakanda style.css
@@ -27,6 +27,8 @@ body{
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
+    animation-name: fade-in;
+    animation-duration: 5s;
 }
 /* header */
 header{
@@ -52,6 +54,9 @@ a {
 #en-tête .logo{
 	padding-top: 5%;
 	padding-left: 15%;
+}
+#en-tête .logo :hover{
+    transform: scale(1.5);
 }
 #en-tête .wakanda-style{
 	font-family: BEYNO Regular;
@@ -374,6 +379,25 @@ footer p {
 
 .copyright {
     grid-column: span 2;
+}
+/* reseaux transformation */
+.reseaux li:hover{
+    transform: scale(1.2);
+}
+section * {
+    animation-name: fade-in;
+    animation-duration: 5s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0%;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 100%;
+        transform: translateX(0px); 
+    }
 }
 
 
