--- a/assiets/css/enigme sytle.css
+++ b/assiets/css/enigme sytle.css
@@ -27,6 +27,8 @@ body{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    animation-name: fade-in;
+    animation-duration: 5s;
 }
 header{
     background-color: black;
@@ -51,6 +53,9 @@ a {
 #en-tête .logo{
     padding-top: 5%;
     padding-left: 15%;
+}
+#en-tête .logo :hover{
+    transform: scale(1.2);
 }
 #en-tête .wakanda-style{
     font-family: BEYNO Regular;
@@ -230,7 +235,7 @@ body{
     line-height: 2.19vw;
 }
 .langage .savoir .transcription .alphabet{
-    margin-top: -20%;
+    margin-top: 10%;
 }
 .langage .savoir .transcription .reponse input[type="text"]{
     color: var(--rose-foncee);
@@ -351,3 +356,24 @@ footer p {
 .copyright {
     grid-column: span 2;
 }
+.reseaux li:hover{
+    transform: scale(1.2);
+}
+   
+
+section * {
+    animation-name: fade-in;
+    animation-duration: 5s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0%;
+        transform: translateX(-50px);
+    }
+    to {
+        opacity: 100%;
+        transform: translateX(0px); 
+    }
+}
+
